Fix z-index of the editor (#1280)

--- a/dashboard/src/components/DeploymentFormBody/Tabs.scss
+++ b/dashboard/src/components/DeploymentFormBody/Tabs.scss
@@ -6,3 +6,7 @@
     }
   }
 }
+
+.editor {
+  z-index: 0;
+}
